--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,49 +7,37 @@
 #
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
+
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-
 title: Dr Ieuan Higgs
 email: i.c.higgs@reading.ac.uk
 description: >- # this means to ignore newlines until "baseurl:"
-  Welcome to the homepage for Dr Ieuan Higgs, who currently works as a
-  lecturer and researcher in the University of Reading Computer Science Department.
-  My research interests include: machine learning, data assimilation and
-  explainable AI, with a focus on their application to Earth systems.
+  Welcome to the homepage for Dr Ieuan Higgs, who currently works as 
+  a lecturer and researcher in the University of Reading Computer Science Department. 
+  My research interests include: machine learning, data assimilation and explainable AI, 
+  with a focus on their application to Earth systems.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: sci_higgs
+twitter_username: scihiggs
 github_username:  ichiggs
 
 # Build settings
+markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
 
 # Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
 # exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
 #   - Gemfile
 #   - Gemfile.lock
-#   - node_modules/
+#   - node_modules
 #   - vendor/bundle/
 #   - vendor/cache/
 #   - vendor/gems/
